output/facebook/rocksdb/163.txt
Hi,

I think it should add a ROCKSDB_LITE compile guard in options.cc.

Thanks
# 

g++ -Wall -Werror -I. -I./include -std=c++11  -DROCKSDB_PLATFORM_POSIX  -DOS_MACOSX -DIOS_CROSS_COMPILE -DROCKSDB_LITE   -DHAVE_JEMALLOC -O2 -fno-omit-frame-pointer -momit-leaf-frame-pointer -DNDEBUG -DNDEBUG -Woverloaded-virtual -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator7.1.sdk -arch i686 -arch x86_64 -c util/options.cc -o ios-x86/util/options.o
util/options.cc:493:26: error: use of undeclared identifier 'NewHashLinkListRepFactory'
  memtable_factory.reset(NewHashLinkListRepFactory());
                         ^
1 error generated.

